@@ -1,12 +1,36 @@
+import xml
 import scraper
-from ... import util
 from .. import _scrapers
+from ... import util
+from ... import ratings
+from .... import cvutil
 
+cvutil.ratingParser()
 
 class Trailer(_scrapers.Trailer):
     def __init__(self, data):
         _scrapers.Trailer.__init__(self, data)
+        self._genres = []
         self._is3D = util.pathIs3D(self.data.get('url', ''))
+        self.parseNFO(self.data.get('nfo'))
+
+    def parseNFO(self, path):
+        if not path:
+            return
+
+        try:
+            with util.vfs.File(path, 'r') as f:
+                data = f.read()
+                root = xml.etree.ElementTree.fromstring(data)
+
+            for genre in root.findall('genre'):
+                self._genres.append(genre.text)
+
+            mpaa = root.find("mpaa")
+            if mpaa is not None:
+                self._rating = ratings.getRating(mpaa.text)
+        except:
+            util.ERROR()
 
     @property
     def ID(self):
@@ -20,11 +44,16 @@ class Trailer(_scrapers.Trailer):
     def is3D(self):
         return self._is3D
 
+    @property
+    def genres(self):
+        return self._genres
+
     def getStaticURL(self):
         return self.data.get('url')
 
     def getPlayableURL(self, res='720p'):
         return self.getStaticURL()
+
 
 
 class ContentTrailerScraper(_scrapers.Scraper):
